Play move sounds on changing plys